Version 0.38.0
  * Changed how reads that map equally to the reference and new junction get resolved to
    eliminate junctions that could get assigned high frequencies due to very little evidence,
    particularly in polymorphism mode. This approach is more conservative and may decrease the
    predicted frequencies of junctions, but should only have minor effects in consensus mode.

Version 0.37.1
  * Fixed bug in the way that indels in homopolymers were realigned for consistency.
    that sporadically caused fatal "Covariate 'quality' exceeded enforced maximum" errors.
  * Fixed fatal "Attempt to add duplicate of this existing entry" error that could arise when
    using user evidence Genome Diff files merged from outputs of previous runs.

Version 0.37.0
  * Warns that breseq results can vary (usually only slightly) with different
    bowtie2 versions and recommends a specific version for consistency.
  * Added back code for shifting indels to improve mutation calling.
  * Added an option for gdtools APPLY to output a new GD file showing the
    positions of each mutation in the (mutated) output genome.
  * Updated documentation related to installation and explaining junction orientations.
  * Fixed crash that could occur if there was a deletion spanning the origin of a
    circular reference sequence.

Version 0.36.1
  * Added an appendix to the manual on how reference sequence files are loaded/used.
  * When loading GenBank files that have a LOCUS line and source feature with different
    lengths, the LOCUS line length is now used to improve compatibility with sequences
    that have been edited in programs that do not update the source feature.
  * Added a warning when CDS features with lengths that are not a multiple of 3 are loaded
    with a suggestion to change these to pseudogenes. Changed a fatal error when annotating a
    mutation in an incomplete final codon in one of these CDS features to a warning and generic coding mutation.